# T_bot

./: .env.example  .gitignore  README.md  SETUP.md  START_HERE.md  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
backend/: __init__.py
backend/api/: advanced_routes.py  main.py
backend/backtesting/: __init__.py  backtest_engine.py  monte_carlo.py  multi_asset_engine.py
backend/core/: config.py  cpu_monitor.py  logging_config.py  throttler.py  worker_pool.py
backend/data/: data_manager.py  database.py  models.py  polygon_client.py
backend/exchanges/: __init__.py  ccxt_client.py
backend/ml/: advanced_features.py  dqn_agent.py  ensemble_model.py  lstm_predictor.py  model_trainer.py  rl_environment.py
backend/monitoring/: __init__.py  prometheus_exporter.py
backend/notifications/: __init__.py  alert_manager.py
backend/portfolio/: __init__.py  optimizer.py
backend/risk/: __init__.py  var_calculator.py
backend/strategies/: __init__.py  arbitrage_strategy.py  market_making_strategy.py  momentum_strategy.py  stat_arb_strategy.py  strategy_base.py
backend/tests/: test_risk_manager.py
backend/trading/: __init__.py  advanced_risk.py  alpaca_client.py  risk_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Dashboard.tsx  PerformanceDashboard.tsx  PositionsTable.tsx  TradingChart.tsx  TradingControls.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/styles/: animations.css  modern.css
models/: .gitkeep
